--- a/Tree.WEB/Views/Shared/_Layout.cshtml
+++ b/Tree.WEB/Views/Shared/_Layout.cshtml
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Tree.WEB</title>
+    <link rel="stylesheet" href="~/css/normalize.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" />
 </head>
 <body>
     <header>
         <nav>
-            <a asp-area="" asp-controller="Home" asp-action="Index">Tree.WEB</a>
             <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
             <a asp-area="" asp-controller="Tree" asp-action="Index">Tree</a>
         </nav>
