Добавление сервисов и одного обращения к репозиторию

--- a/Tree.WEB/Views/Tree/Index.cshtml
+++ b/Tree.WEB/Views/Tree/Index.cshtml
@@ -1,1 +1,10 @@
 ﻿<h2>Tree</h2>
+
+<div>
+    <h3>Genres</h3>
+    <button id ="genres-loader-btn">Загрузить жанры</button>
+    <div id="genres-container"></div>
+
+</div>
+
+<script src="~/script/tree.js"></script>
