--- a/Tree.WEB/Views/Shared/_Layout.cshtml
+++ b/Tree.WEB/Views/Shared/_Layout.cshtml
@@ -16,8 +16,10 @@
     </header>
     <main>
         @RenderBody()
+
     </main>
     <footer></footer>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+<script src="~/build/ga.vue.js"></script>
 </html>
