--- a/Tree.WEB/Views/Tree/Index.cshtml
+++ b/Tree.WEB/Views/Tree/Index.cshtml
@@ -1,10 +1,3 @@
 ﻿<h2>Tree</h2>
 
-<div>
-    <h3>Genres</h3>
-    <button id ="genres-loader-btn">Загрузить жанры</button>
-    <div id="genres-container"></div>
-
-</div>
-
-<script src="~/script/tree.js"></script>
+<div id="vue-tree"></div>
